OR-1647 Fix FAB to overlap the calendar

--- a/frontend/css/styles.less
+++ b/frontend/css/styles.less
@@ -113,3 +113,7 @@ header.topbar {
 // Used in selector
 .esn-item {
 }
+
+.m-btn {
+  z-index: 2;
+}
